agregada especificasiones de la API
